oss-knowledge-gitops/backend/context-manager/base/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: context-manager
spec:
    selector:
        app: context-manager
    ports:
        - port: 8005
          targetPort: 8005
    type: ClusterIP
